Connected forms to netlify

--- a/how-they-work.html
+++ b/how-they-work.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <title>Mojogloves | Learn to touch-type fast!</title>
+    <title>How They Work| mojogloves</title>
   </head>
   <body>
     <header>
