--- a/index.html
+++ b/index.html
@@ -1457,7 +1457,7 @@
             Fill out the form below or email us directly at
             <a href="#">sales@mojogloves.co.nz</a>
           </p>
-          <form netlify>
+          <form name="contact" method="POST" netlify>
             <label>
               Full name*
               <input type="text" placeholder="Enter full name" />
