added field data for forms

--- a/how-they-work.html
+++ b/how-they-work.html
@@ -195,7 +195,7 @@
           <p class="copy">
             &copy; Mojo Gloves Limited 2020, All Rights Reserved
           </p>
-          <p class="site-by">Site by Pine</p>
+          <p class="site-by">Site by WT</p>
         </div>
       </div>
     </footer>
