added logo and updated site by reference

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div class="header-container">
-        <h2>LOGO</h2>
+        <img src="../imgs/logo.png" alt="mojoglvoes logo" class="header-logo" />
         <nav>
           <ul>
             <li><a href="index.html" class="selected">HOME</a></li>
@@ -1481,7 +1481,11 @@
     </main>
     <footer>
       <div class="container">
-        <h2>LOGO</h2>
+        <img
+          src="../imgs/logoInvert.png"
+          alt="mojoglvoes logo"
+          class="footer-logo"
+        />
         <ul class="footer-nav">
           <li><a href="index.html">HOME</a></li>
           <li><a href="how-they-work.html">HOW THEY WORK</a></li>
@@ -1507,7 +1511,7 @@
           <p class="copy">
             &copy; Mojo Gloves Limited 2020, All Rights Reserved
           </p>
-          <p class="site-by">Site by WT</p>
+          <p class="site-by">Site by <a href = "#" class ="wtLogo" target="_blank" rel = "noopener">W</span></p>
         </div>
       </div>
     </footer>
