--- a/order.html
+++ b/order.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div class="header-container">
-        <h2>LOGO</h2>
+        <img src="../imgs/logo.png" alt="mojoglvoes logo" class="header-logo" />
         <nav>
           <ul>
             <li><a href="index.html">HOME</a></li>
@@ -142,7 +142,11 @@
     </main>
     <footer>
       <div class="container">
-        <h2>LOGO</h2>
+        <img
+          src="../imgs/logoInvert.png"
+          alt="mojoglvoes logo"
+          class="footer-logo"
+        />
         <ul class="footer-nav">
           <li><a href="index.html">HOME</a></li>
           <li><a href="how-they-work.html">HOW THEY WORK</a></li>
@@ -168,7 +172,10 @@
           <p class="copy">
             &copy; Mojo Gloves Limited 2020, All Rights Reserved
           </p>
-          <p class="site-by">Site by WT</p>
+          <p class="site-by">
+            Site by
+            <a href = "#" class ="wtLogo" target="_blank" rel = "noopener">W</span>
+          </p>
         </div>
       </div>
     </footer>
@@ -193,7 +200,11 @@
       <div class="modal">
         <div class="container">
           <span class="close" id="closeOrder">&times;</span>
-          <h2>LOGO</h2>
+          <img
+            src="../imgs/logoTagline.png"
+            alt="mojoglvoes logo"
+            class="modal-logo"
+          />
           <p>
             Please fill out the form below to place an order. Once we have
             received your order we will send out payment instructions
@@ -232,7 +243,11 @@
       <div class="modal">
         <div class="container">
           <span class="close" id="review-close">&times;</span>
-          <h2>LOGO</h2>
+          <img
+            src="../imgs/logoTagline.png"
+            alt="mojoglvoes logo"
+            class="modal-logo"
+          />
           <p>Leave us a review!</p>
           <form class="index-form" name="review" method="POST" id="ratingForm">
             <label>
