updated link to creator site

--- a/order.html
+++ b/order.html
@@ -13,12 +13,20 @@
       crossorigin="anonymous"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <title>Order Now | Mojogloves</title>
+    <link rel="icon" href="../imgs/icon.png" />
+    <title>Order Now | mojogloves</title>
   </head>
   <body>
     <header>
       <div class="header-container">
-        <img src="../imgs/logo.png" alt="mojoglvoes logo" class="header-logo" />
+        <a href="index.html">
+          <img
+            src="../imgs/logo.png"
+            alt="mojoglvoes logo"
+            class="header-logo"
+          />
+        </a>
+
         <nav>
           <ul>
             <li><a href="index.html">HOME</a></li>
@@ -174,7 +182,14 @@
           </p>
           <p class="site-by">
             Site by
-            <a href = "#" class ="wtLogo" target="_blank" rel = "noopener">W</span>
+            <a
+              href="https://www.williamthomson.co.nz/"
+              class="wtLogo"
+              target="_blank"
+              rel="noopener"
+            >
+              W
+            </a>
           </p>
         </div>
       </div>
