--- a/how-they-work.html
+++ b/how-they-work.html
@@ -13,12 +13,15 @@
       crossorigin="anonymous"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <title>How They Work| mojogloves</title>
+    <title>How They Work | mojogloves</title>
+    <link rel="icon" href="../imgs/icon.png">
   </head>
   <body>
     <header>
       <div class="header-container">
+        <a href = "index.html">
         <img src="../imgs/logo.png" alt="mojoglvoes logo" class="header-logo" />
+      </a>
         <nav>
           <ul>
             <li><a href="index.html">HOME</a></li>
@@ -195,7 +198,7 @@
           <p class="copy">
             &copy; Mojo Gloves Limited 2020, All Rights Reserved
           </p>
-          <p class="site-by">Site by <a href = "#" class ="wtLogo" target="_blank" rel = "noopener">W</span></p>
+          <p class="site-by">Site by <a href = "https://www.williamthomson.co.nz/" class ="wtLogo" target="_blank" rel = "noopener">W</a></p>
         </div>
       </div>
     </footer>
