updated text content

--- a/how-they-work.html
+++ b/how-they-work.html
@@ -109,10 +109,7 @@
             <div class="step1 steps one ">
               <h2>Set up</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Reprehenderit earum dignissimos sed quaerat culpa doloribus
-                harum quos aut et unde! earum dignissimos sed quaerat culpa
-                doloribus harum quos aut et unde!
+               Put your mojogloves on and stick THE QUICK BROWN FOX teaching aid vinyl strip to the top of your computer screen.
               </p>
               <hr />
             </div>
@@ -130,10 +127,7 @@
             <div class="step2 steps four">
               <h2>Open document</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Reprehenderit earum dignissimos sed quaerat culpa doloribus
-                harum quos aut et unde! earum dignissimos sed quaerat culpa
-                doloribus harum quos aut et unde!
+                Position your fingers on the keyboard home keys A S D F J K L.
               </p>
               <hr />
             </div>
@@ -151,10 +145,7 @@
             <div class="step3 steps seven">
               <h2>Practice</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Reprehenderit earum dignissimos sed quaerat culpa doloribus
-                harum quos aut et unde! earum dignissimos sed quaerat culpa
-                doloribus harum quos aut et unde!
+              Open a blank document and start typing THE QUICK BROWN FOX JUMPED OVER THE LAZY DOGS by matching your finger with the coloured letter on your teaching aid (e.g. Q uses the little finger of the left hand, O uses the 3rd finger of the right hand).
               </p>
               <hr />
             </div>
