added video modal section

--- a/how-they-work.html
+++ b/how-they-work.html
@@ -16,7 +16,7 @@
     <title>How They Work | mojogloves</title>
     <link rel="icon" href="../imgs/icon.png">
   </head>
-  <body>
+  <body class ="htw-bg">
     <header>
       <div class="header-container">
         <a href = "index.html">
@@ -93,14 +93,9 @@
       <!-- ----------------------------------------------- -->
       <section class="sub-page-showcase">
         <div class="container">
-          <h3 class="sub-text">Watch the vide below and follow the steps</h3>
+          <h3 class="sub-text">Watch the video below and follow the steps</h3>
           <h1 class="sub-page-heading">How they work</h1>
-          <iframe
-            class="video"
-            width="100%"
-            height="500px"
-            src=""
-          ></iframe>
+          
         </div>
       </section>
       <section class="guide">
@@ -121,7 +116,7 @@
             </div>
 
             <div class="step1-img three">
-              <img src="imgs/step1.jpg" alt="Putting mojogloves on hands" />
+              <iframe width="100%" height="100%" src="https://www.youtube.com/embed/RhB4AQ80TDA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             
             <div class="step2 steps four">
@@ -139,7 +134,7 @@
             </div>
 
             <div class="step1-img six">
-              <img src="imgs/step2.jpg" alt="Laptop Screen" />
+              <iframe width="100%" height="100%" src="https://www.youtube.com/embed/zAehajhFrlY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
             <div class="step3 steps seven">
@@ -156,10 +151,7 @@
             </div>
 
             <div class="step1-img nine">
-              <img
-                src="imgs/step3.jpg"
-                alt="Typing on laptop with mojogloves on"
-              />
+             <iframe width="100%" height="100%" src="https://www.youtube.com/embed/aORr-y3C_Cc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
           </div>
