--- a/order.html
+++ b/order.html
@@ -77,19 +77,30 @@
               </div>
             </div>
             <div class="product-info">
-              <h2>Mojo Gloves and teaching aid</h2>
-              <h3>$25.00</h3>
-              <span>/ includes mojogloves and teaching aid</span>
+              <h2>
+                mojogloves & THE QUICK BROWN FOX JUMPED OVER THE LAZY DOGS vinyl
+                strip teaching aid.
+              </h2>
               <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Corrupti dolorum labore minima ipsam eos. Quod officia corrupti
-                tempora voluptatem ipsa magni autem doloremque nostrum facilis,
-                dolore aspernatur sint quisquam dolores dolor ab. Unde,
-                necessitatibus accusantium!
+                mojogloves are light and funky fingerless gloves made from
+                stretch polyester/elastane construction with one size fits all
+                designed to be worn anywhere anytime.
               </p>
+              <h3>Quantity</h3>
+              <ul class="prices">
+                <li>1 to 20 pair $24.99 ea</li>
+                <li>20 to 50 pair $23.75 ea</li>
+                <li>50 to 100 pair $22.50 ea</li>
+                <li>100 + $19.99 ea</li>
+              </ul>
+
               <h3>Shipping</h3>
-              <span class="shipping-cost">$4.99</span>
+              <span class="shipping-cost">$5.00</span>
               <span>/ New Zealand wide shipping</span>
+              <p>
+                Delivery within 3-5 Business Days (+2 extra business days for
+                rural delivery)
+              </p>
               <hr />
               <button class="btns accent-bg" id="order-now-btn">
                 Order Now
