--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <link rel="icon" href="../imgs/icon.png" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <title>mojogloves | Learn to touch-type fast!</title>
+    <meta
+      name="description"
+      content="mojogloves are funky, fingerless gloves designed to help you to teach yourself to touch-type anywhere, anytime!"
+    />
   </head>
   <body>
     <header>
@@ -65,7 +69,7 @@
             <div class="showcase-btns">
               <button
                 class="accent-bg btns"
-                onclick="location.href = 'how-they-work.html'"
+                onclick="location.href = 'order.html'"
               >
                 Order Now
               </button>
@@ -1442,18 +1446,20 @@
           <div class="carousel">
             <i class="fas fa-angle-double-left prev arrows" id="prev-test"></i>
             <div class="testimonial-info" id="test-info">
-              <img id="avatar" src="imgs/sample.jpg" />
-              <h3 id="testimonial-name">William Thomson</h3>
-              <h4 id="testimonial-location">Tauranga, New Zealand</h4>
+              <h3 id="testimonial-name">Tira</h3>
+              <h4 id="testimonial-location">Taupo, New Zealand</h4>
               <p id="testimonial-paragraph">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. A rem
-                inventore dolorem reiciendis praesentium quaerat, deleniti
-                adipisci voluptatibus eaque amet delectus ipsum dicta ab magnam?
+                When Megan first showed me her mojogloves I thought Wow, they
+                look really cool. I bought them straight away for my 9 year old
+                son to help him with his typing & school work on his chromebook
+                :) After practising with the gloves he feels way more confident
+                typing without looking at the keyboard as much now. Thanks Megan
+                - well designed product and great for kids!
               </p>
             </div>
             <div class="carousel-circs">
               <i class="fas fa-circle" id="circ1"></i>
-              <i class="far fa-circle" id="circ2"></i>
+              <!-- <i class="far fa-circle" id="circ2"></i> -->
             </div>
             <i class="fas fa-angle-double-right next arrows" id="next-test"></i>
           </div>
@@ -1511,10 +1517,11 @@
           href="https://www.facebook.com/Teach-yourself-touch-typing-with-MojoGloves-109823190705692/?view_public_for=109823190705692&ref=page_internal"
           class="social"
           target="_blank"
+          rel="noopener"
         >
           <i class="fab fa-facebook social"></i>
         </a>
-        <a href="#" class="social"><i class="fab fa-instagram social"></i></a>
+        <!-- <a href="#" class="social"><i class="fab fa-instagram social"></i></a> -->
         <hr />
         <div class="lower-footer">
           <p class="copy">
@@ -1539,7 +1546,7 @@
         <iframe
           width="100%"
           height="100%"
-          src="https://www.youtube.com/embed/RhB4AQ80TDA"
+          src="https://www.youtube.com/embed/RsdIM-ZzooE"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
