--- a/order.html
+++ b/order.html
@@ -15,6 +15,10 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="icon" href="../imgs/icon.png" />
     <title>Order Now | mojogloves</title>
+    <meta
+      name="description"
+      content="mojogloves are funky, fingerless gloves designed to help you to teach yourself to touch-type anywhere, anytime!"
+    />
   </head>
   <body>
     <header>
@@ -125,19 +129,19 @@
               <i class="fas fa-star gold"></i>
               <i class="fas fa-star gold"></i>
             </div>
-            <h3 class="review-name">John Doe</h3>
-            <span class="review-location">Auckland, New Zealand</span>
+            <h3 class="review-name">Tira</h3>
+            <span class="review-location">Taupo, New Zealand</span>
             <p class="review-p">
-              Within two weeks of purchasing the Mojo Gloves and learning aid, I
-              saw drastic improvements in my typing speed. Being a web
-              development student, I am typing for long periods of time most
-              days of the week. By increasing my typing speed I am able to get
-              work done much faster. Would highly recommend this product to any
-              looking to boost there typing speed.
+              When Megan first showed me her mojogloves I thought Wow, they look
+              really cool. I bought them straight away for my 9 year old son to
+              help him with his typing & school work on his chromebook :) After
+              practising with the gloves he feels way more confident typing
+              without looking at the keyboard as much now. Thanks Megan - well
+              designed product and great for kids!
             </p>
           </div>
-          <hr class="review-hr" />
-          <div class="full-review">
+          <!-- <hr class="review-hr" /> -->
+          <!-- <div class="full-review">
             <div class="stars">
               <i class="fas fa-star gold"></i>
               <i class="fas fa-star gold"></i>
@@ -155,7 +159,7 @@
               work done much faster. Would highly recommend this product to any
               looking to boost there typing speed.
             </p>
-          </div>
+          </div> -->
         </div>
       </section>
     </main>
@@ -182,10 +186,11 @@
           href="https://www.facebook.com/Teach-yourself-touch-typing-with-MojoGloves-109823190705692/?view_public_for=109823190705692&ref=page_internal"
           class="social"
           target="_blank"
+          rel="noopener"
         >
           <i class="fab fa-facebook social"></i>
         </a>
-        <a href="#" class="social"><i class="fab fa-instagram social"></i></a>
+        <!-- <a href="#" class="social"><i class="fab fa-instagram social"></i></a> -->
         <hr />
         <div class="lower-footer">
           <p class="copy">
