--- a/how-they-work.html
+++ b/how-they-work.html
@@ -14,6 +14,7 @@
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <title>How They Work | mojogloves</title>
+    <meta name="description" content="mojogloves are funky, fingerless gloves designed to help you to teach yourself to touch-type anywhere, anytime!"/>
     <link rel="icon" href="../imgs/icon.png">
   </head>
   <body class ="htw-bg">
@@ -174,8 +175,8 @@
           <i class="far fa-paper-plane social"></i>
           sales@mojogloves.co.nz
         </a>
-        <a href="https://www.facebook.com/Teach-yourself-touch-typing-with-MojoGloves-109823190705692/?view_public_for=109823190705692&ref=page_internal" class="social" target="_blank"><i class="fab fa-facebook social"></i></a>
-        <a href="#" class="social"><i class="fab fa-instagram social"></i></a>
+        <a href="https://www.facebook.com/Teach-yourself-touch-typing-with-MojoGloves-109823190705692/?view_public_for=109823190705692&ref=page_internal" class="social" target="_blank" rel = "noopener"><i class="fab fa-facebook social"></i></a>
+        <!-- <a href="#" class="social"><i class="fab fa-instagram social"></i></a> -->
         <hr />
         <div class="lower-footer">
           <p class="copy">
