--- a/index.html
+++ b/index.html
@@ -1544,6 +1544,7 @@
     <div id="video-modal">
       <div class="video-container">
         <iframe
+          id="indexVideo"
           width="100%"
           height="100%"
           src="https://www.youtube.com/embed/RsdIM-ZzooE"
