Made content changes

--- a/how-they-work.html
+++ b/how-they-work.html
@@ -15,13 +15,13 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <title>How They Work | mojogloves</title>
     <meta name="description" content="mojogloves are funky, fingerless gloves designed to help you to teach yourself to touch-type anywhere, anytime!"/>
-    <link rel="icon" href="../imgs/icon.png">
+    <link rel="icon" href="imgs/icon.png">
   </head>
   <body class ="htw-bg">
     <header>
       <div class="header-container">
         <a href = "index.html">
-        <img src="../imgs/logo.png" alt="mojoglvoes logo" class="header-logo" />
+        <img src="imgs/logoTagline.png" alt="mojoglvoes logo" class="header-logo" />
       </a>
         <nav>
           <ul>
@@ -162,7 +162,7 @@
     </main>
     <footer>
       <div class="container">
-        <img src="../imgs/logoInvert.png" alt="mojoglvoes logo" class="footer-logo" />
+        <img src="imgs/logoInvert.png" alt="mojoglvoes logo" class="footer-logo" />
         <ul class="footer-nav">
           <li><a href="index.html">HOME</a></li>
           <li><a href="how-they-work.html">HOW THEY WORK</a></li>
