--- a/order.html
+++ b/order.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link rel="icon" href="../imgs/icon.png" />
+    <link rel="icon" href="imgs/icon.png" />
     <title>Order Now | mojogloves</title>
     <meta
       name="description"
@@ -25,7 +25,7 @@
       <div class="header-container">
         <a href="index.html">
           <img
-            src="../imgs/logo.png"
+            src="imgs/logoTagline.png"
             alt="mojoglvoes logo"
             class="header-logo"
           />
@@ -92,10 +92,7 @@
               </p>
               <h3>Quantity</h3>
               <ul class="prices">
-                <li>1 to 20 pair $24.99 ea</li>
-                <li>20 to 50 pair $23.75 ea</li>
-                <li>50 to 100 pair $22.50 ea</li>
-                <li>100 + $19.99 ea</li>
+              <li>$24.99 each (includes GST)</li>
               </ul>
 
               <h3>Shipping</h3>
@@ -166,7 +163,7 @@
     <footer>
       <div class="container">
         <img
-          src="../imgs/logoInvert.png"
+          src="imgs/logoInvert.png"
           alt="mojoglvoes logo"
           class="footer-logo"
         />
@@ -232,7 +229,7 @@
         <div class="container">
           <span class="close" id="closeOrder">&times;</span>
           <img
-            src="../imgs/logoTagline.png"
+            src="imgs/logoTagline.png"
             alt="mojoglvoes logo"
             class="modal-logo"
           />
@@ -275,7 +272,7 @@
         <div class="container">
           <span class="close" id="review-close">&times;</span>
           <img
-            src="../imgs/logoTagline.png"
+            src="imgs/logoTagline.png"
             alt="mojoglvoes logo"
             class="modal-logo"
           />
