--- a/how-they-work.html
+++ b/how-they-work.html
@@ -123,7 +123,7 @@
             <div class="step2 steps four">
               <h2>Open document</h2>
               <p>
-                Position your fingers on the keyboard home keys A S D F J K L.
+                Position your fingers on the keyboard home keys A S D F J K L ;
               </p>
               <hr />
             </div>
