--- a/order.html
+++ b/order.html
@@ -92,7 +92,7 @@
               </p>
               <h3>Quantity</h3>
               <ul class="prices">
-              <li>$24.99 each (includes GST)</li>
+              <li>$24.99 per set (includes GST)</li>
               </ul>
 
               <h3>Shipping</h3>
